[package]
name = "tokio-mqtt"
version = "0.1.0"
authors = ["Adam Jacobus <adam.m.jacobus@gmail.com>"]

[dependencies]
futures = "0.1.14"
tokio-core = "0.1.8"
tokio-io = "0.1.2"
tokio-tls = "0.1.2"
bitflags = "0.8.0"
error-chain = { git = "https://github.com/brson/error-chain" }
nom = "2.1.0"
enum_primitive = "0.1.1"
bytes = "0.4.1"
serde = "0.9.13"
serde_derive = "0.9.13"
bincode = "0.7.0"
touch = "0"
linked-hash-map = { version = "0.4.2", features = ["serde_impl"] }
take = "0.1.0"
regex = "0.2"
lazy_static = "0.2"
futures-mutex = "0.1.2"

[dev-dependencies]
nom-test-helpers = "2.0.0"
