[package]
name = "tokio-mqtt"
version = "0.1.0"
authors = ["Adam Jacobus <adam.m.jacobus@gmail.com>"]

[dependencies]
futures = "0.1.16"
tokio-core = "0.1.10"
tokio-io = "0.1.3"
tokio-tls = "0.1.3"
error-chain = { git = "https://github.com/rust-lang-nursery/error-chain" }
bytes = "0.4.1"
serde = "0.9.13"
serde_derive = "0.9.13"
bincode = "0.7.0"
touch = "0"
lazy_static = "0.2"
slog = "2.1.1"
slog-stdlog = "3.0.2"
derive_builder = "0.5.1"
mqtt-proto = { path = "mqtt-proto" }

[workspace]
