[package]
name = "tokio-mqtt"
version = "0.1.0"
authors = ["Adam Jacobus <adam.m.jacobus@gmail.com>"]
edition = "2018"

[dependencies]
futures = { git = "https://github.com/rust-lang-nursery/futures-rs" }
tokio = "0.2.0-alpha.6"
bytes = "0.4.12"
serde = "1.0.92"
serde_derive = "1.0.92"
bincode = "1.1.4"
touch = "0.0.1"
lazy_static = "1.3.0"
slog = "2.4.1"
slog-stdlog = "3.0.2"
derive_builder = "0.7.2"
snafu = "0.6.0"
mqtt3-proto = { path = "mqtt3-proto" }
regex = "1.1"

[workspace]