[package]
name = "mqtt3-proto"
description = "Types for MQTTv3 protocol packets, as well as parser and encoder. Also contains a few extra utils for implementing the protocol."
version = "1.0.0"
authors = ["Adam Jacobus <adam.m.jacobus@gmail.com>"]
categories = ["encoding", "network-programming", "parser-implementations"]
keywords = ["mqtt", "mqtt-v3.1.1"]

[dependencies]
bitflags = "1.1"
bytes = "0.4.12"
nom = "5.0.0-beta1"
enum_primitive = "0.1.1"
snafu = "0.4.1"
derive_builder = "0.7"